ompi/mpi/f03/mpi.f03


integer(C_INT) function &
MPI_Intercomm_merge(intercomm, high, newintercomm, ierr) &
  BIND(C, name="MPI_Intercomm_merge")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: intercomm
  integer(INT_C), value, intent(in) :: high
  integer(MPI_HANDLE_KIND), value, intent(out) :: newintercomm
end function MPI_Intercomm_merge

end interface MPI_Intercomm_merge


interface MPI_Iprobe

integer(C_INT) function &
MPI_Iprobe(source, tag, comm, flag, status, ierr) &
  BIND(C, name="MPI_Iprobe")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: source
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer, value, intent(out) :: flag
  integer(MPI_STATUS_SIZE), value, intent(inout) :: status
end function MPI_Iprobe

end interface MPI_Iprobe


interface MPI_Irecv

integer(C_INT) function &
MPI_Irecv(buf, count, datatype, source, tag, comm, request&
        , ierr) &
  BIND(C, name="MPI_Irecv")
  use MPI_C_BINDING
  type(C_PTR), value, intent(out) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: source
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_Irecv

end interface MPI_Irecv


interface MPI_Irsend

integer(C_INT) function &
MPI_Irsend(buf, count, datatype, dest, tag, comm, request&
        , ierr) &
  BIND(C, name="MPI_Irsend")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: dest
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_Irsend

end interface MPI_Irsend


interface MPI_Is_thread_main

integer(C_INT) function &
MPI_Is_thread_main(flag, ierr) &
  BIND(C, name="MPI_Is_thread_main")
  use MPI_C_BINDING
  integer, value, intent(out) :: flag
end function MPI_Is_thread_main

end interface MPI_Is_thread_main


interface MPI_Isend

integer(C_INT) function &
MPI_Isend(buf, count, datatype, dest, tag, comm, request&
        , ierr) &
  BIND(C, name="MPI_Isend")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: dest
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_Isend

end interface MPI_Isend


interface MPI_Issend

integer(C_INT) function &
MPI_Issend(buf, count, datatype, dest, tag, comm, request&
        , ierr) &
  BIND(C, name="MPI_Issend")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: dest
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_Issend

end interface MPI_Issend


interface MPI_Keyval_create

integer(C_INT) function &
MPI_Keyval_create(copy_fn, delete_fn, keyval, extra_state, ierr) &
  BIND(C, name="MPI_Keyval_create")
  use MPI_C_BINDING
  external :: copy_fn
  external :: delete_fn
  integer(INT_C), value, intent(out) :: keyval
  integer(C_INT), value, intent(in) :: extra_state
end function MPI_Keyval_create

end interface MPI_Keyval_create


interface MPI_Keyval_free

integer(C_INT) function &
MPI_Keyval_free(keyval, ierr) &
  BIND(C, name="MPI_Keyval_free")
  use MPI_C_BINDING
  integer(INT_C), value, intent(inout) :: keyval
end function MPI_Keyval_free

end interface MPI_Keyval_free


interface MPI_Lookup_name

integer(C_INT) function &
MPI_Lookup_name(service_name, info, port_name, ierr) &
  BIND(C, name="MPI_Lookup_name")
  use MPI_C_BINDING
  character(len=*), value, intent(in) :: service_name
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
  character(len=*), value, intent(out) :: port_name
end function MPI_Lookup_name

end interface MPI_Lookup_name


interface MPI_Op_create

integer(C_INT) function &
MPI_Op_create(function, commute, op, ierr) &
  BIND(C, name="MPI_Op_create")
  use MPI_C_BINDING
  external :: function
  integer, value, intent(in) :: commute
  integer(MPI_HANDLE_KIND), value, intent(out) :: op
end function MPI_Op_create

end interface MPI_Op_create


interface MPI_Op_free

integer(C_INT) function &
MPI_Op_free(op, ierr) &
  BIND(C, name="MPI_Op_free")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: op
end function MPI_Op_free

end interface MPI_Op_free


interface MPI_Open_port

integer(C_INT) function &
MPI_Open_port(info, port_name, ierr) &
  BIND(C, name="MPI_Open_port")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
  character(len=*), value, intent(out) :: port_name
end function MPI_Open_port

end interface MPI_Open_port


interface MPI_Pack

integer(C_INT) function &
MPI_Pack(inbuf, incount, datatype,
         outbuf, outsize, position, comm, ierr) &
  BIND(C, name="MPI_Pack")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: inbuf
  integer(INT_C), value, intent(in) :: incount
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  type(C_PTR), value, intent(out) :: outbuf
  integer(INT_C), value, intent(in) :: outsize
  integer(INT_C), value, intent(inout) :: position
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Pack

end interface MPI_Pack


interface MPI_Pack_external_size

integer(C_INT) function &
MPI_Pack_external_size(datarep, incount, datatype, size, ierr) &
  BIND(C, name="MPI_Pack_external_size")
  use MPI_C_BINDING
  character(len=*), value, intent(in) :: datarep
  integer(INT_C), value, intent(in) :: incount
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(kind=MPI_ADDRESS_KIND), value, intent(out) :: size
end function MPI_Pack_external_size

end interface MPI_Pack_external_size


interface MPI_Pack_size

integer(C_INT) function &
MPI_Pack_size(incount, datatype, comm, size, ierr) &
  BIND(C, name="MPI_Pack_size")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: incount
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(out) :: size
end function MPI_Pack_size

end interface MPI_Pack_size


interface MPI_Pcontrol

subroutine MPI_Pcontrol(level) &
  BIND(C, name="MPI_Pcontrol")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: level
end subroutine MPI_Pcontrol

end interface MPI_Pcontrol


interface MPI_Probe

integer(C_INT) function &
MPI_Probe(source, tag, comm, status, ierr) &
  BIND(C, name="MPI_Probe")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: source
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_STATUS_SIZE), value, intent(inout) :: status
end function MPI_Probe

end interface MPI_Probe


interface MPI_Publish_name

integer(C_INT) function &
MPI_Publish_name(service_name, info, port_name, ierr) &
  BIND(C, name="MPI_Publish_name")
  use MPI_C_BINDING
  character(len=*), value, intent(in) :: service_name
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
  character(len=*), value, intent(in) :: port_name
end function MPI_Publish_name

end interface MPI_Publish_name


interface MPI_Put

integer(C_INT) function &
MPI_Put(origin_addr, origin_count, origin_datatype, target_rank, target_disp, target_count, target_datatype, &
        win, ierr) &
  BIND(C, name="MPI_Put")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: origin_addr
  integer(INT_C), value, intent(in) :: origin_count
  integer(MPI_HANDLE_KIND), value, intent(in) :: origin_datatype
  integer(INT_C), value, intent(in) :: target_rank
  integer(kind=MPI_ADDRESS_KIND), value, intent(in) :: target_disp
  integer(INT_C), value, intent(in) :: target_count
  integer(MPI_HANDLE_KIND), value, intent(in) :: target_datatype
  integer(MPI_HANDLE_KIND), value, intent(in) :: win
end function MPI_Put

end interface MPI_Put


interface MPI_Query_thread

integer(C_INT) function &
MPI_Query_thread(provided, ierr) &
  BIND(C, name="MPI_Query_thread")
  use MPI_C_BINDING
  integer(INT_C), value, intent(out) :: provided
end function MPI_Query_thread

end interface MPI_Query_thread


interface MPI_Recv

integer(C_INT) function &
MPI_Recv(buf, count, datatype, source, tag, comm, status&
        , ierr) &
  BIND(C, name="MPI_Recv")
  use MPI_C_BINDING
  type(C_PTR), value, intent(out) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: source
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_STATUS_SIZE), value, intent(inout) :: status
end function MPI_Recv

end interface MPI_Recv


interface MPI_Recv_init

integer(C_INT) function &
MPI_Recv_init(buf, count, datatype, source, tag, comm, request&
        , ierr) &
  BIND(C, name="MPI_Recv_init")
  use MPI_C_BINDING
  type(C_PTR), value, intent(out) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: source
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_Recv_init

end interface MPI_Recv_init


interface MPI_Reduce

integer(C_INT) function &
MPI_Reduce(sendbuf, recvbuf, count,
           datatype, op, root, comm, ierr) &
  BIND(C, name="MPI_Reduce")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: sendbuf
  type(C_PTR), value, intent(inout) :: recvbuf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_HANDLE_KIND), value, intent(in) :: op
  integer(INT_C), value, intent(in) :: root
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Reduce

end interface MPI_Reduce


interface MPI_Reduce_scatter

integer(C_INT) function &
MPI_Reduce_scatter(sendbuf, recvbuf, recvcounts,
                   datatype, op, comm, ierr) &
  BIND(C, name="MPI_Reduce_scatter")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: sendbuf
  type(C_PTR), value, intent(inout) :: recvbuf
  integer(INT_C), dimension(*), value, intent(in) :: recvcounts
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_HANDLE_KIND), value, intent(in) :: op
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Reduce_scatter

end interface MPI_Reduce_scatter


interface MPI_Register_datarep

integer(C_INT) function &
MPI_Register_datarep(datarep, read_conversion_fn, write_conversion_fn,
                     dtype_file_extent_fn, extra_state, ierr) &
  BIND(C, name="MPI_Register_datarep")
  use MPI_C_BINDING
  character(len=*), value, intent(in) :: datarep
  external :: read_conversion_fn
  external :: write_conversion_fn
  external :: dtype_file_extent_fn
  integer(C_INT), value, intent(in) :: extra_state
end function MPI_Register_datarep

end interface MPI_Register_datarep


interface MPI_Request_free

integer(C_INT) function &
MPI_Request_free(request, ierr) &
  BIND(C, name="MPI_Request_free")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: request
end function MPI_Request_free

end interface MPI_Request_free


interface MPI_Request_get_status
